[package]
name = "evblog"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
markdown = "1.0.0-alpha.7"
toml = { version = "0.7.3", features = ["parse"] }
